# ChangeLog for app-misc/livecd-tools
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/livecd-tools/ChangeLog,v 1.77 2006/06/22 15:33:07 wolf31o2 Exp $

*livecd-tools-1.0.31 (22 Jun 2006)

  22 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd-tools-1.0.31.ebuild:
  Version bumped with some patches from Joshua Kinard <kumba@gentoo.org>.
  Closing bug #135503 and bug #136497.

  21 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd-tools-1.0.29.ebuild, livecd-tools-1.0.30.ebuild:
  Rearranged the dependencies since gawk and pciutils are now used outside of
  just video card detection. Also, cleaned up the X USE flag usage, since only
  autoconfig uses mkxf86config if USE=-opengl. Cleaning up older ebuilds.

  09 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd-tools-1.0.30.ebuild:
  Marking stable for building 2006.1's release.

*livecd-tools-1.0.30 (02 Jun 2006)

  02 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd-tools-1.0.30.ebuild:
  Version bump.  Closes bug #133955.

  30 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd-tools-1.0.29.ebuild:
  Added dependency on dev-util/dialog for net-setup and closing bug #134486.

  12 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd-tools-1.0.25.ebuild, -livecd-tools-1.0.28.ebuild,
  livecd-tools-1.0.29.ebuild:
  Marking stable to match version used on 2006.0 release.

  10 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd-tools-1.0.29.ebuild:
  Added sed to fix bug #122367.

*livecd-tools-1.0.29 (09 Feb 2006)

  09 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd-tools-1.0.29.ebuild:
  Version bump to 1.0.29 to resolve a bug with serial consoles on sparc.

  20 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd-tools-1.0.25.ebuild, livecd-tools-1.0.28.ebuild:
  Removed virtual/x11 as we don't actually require any portions of X.
