@@ -3,6 +3,7 @@ Hash: SHA1
 
 DIST livecd-tools-1.0.30.tar.bz2 9748 RMD160 b0f46ae44ce0aef4e2854eaf7ec866dccd097ff2 SHA1 412f863ca4601808c7aee2e5fe2dbe58850aea99 SHA256 e91d872ae63bfb21240db79d1b5c90206d78202ed4e5af6898c35a29c48f808d
 DIST livecd-tools-1.0.31.tar.bz2 9910 RMD160 f88c84bebd74a24f7a1510d90a119cc007698fce SHA1 d339e66ad5f80cdcc84befc693bc72d460586d0a SHA256 bfd019117b927c4f9e2aefaeff51140e5ce3f5da483a929088d9275425e89d8d
+DIST livecd-tools-1.0.32.tar.bz2 10001 RMD160 cfd0e7d1e0162e3f0f58f28ba9585ac6bcfdd84b SHA1 2050a156f926d579cb428e4cfce5e54676061fdc SHA256 ca9861356beb4b2f059b7e80db7e35841f0d6b163af3b8b6528b7cdbbf1b8c2b
 EBUILD livecd-tools-1.0.30.ebuild 1172 RMD160 e6bba0f1af085070f7b0317b24d30ca7d7a79604 SHA1 9d78cfcaef05539d07ab6e9d36423f93a8f45818 SHA256 464fa322cc96ec63bed3533f1389f552d325650b5a1d3567a5e1cc54ee74c9f5
 MD5 b333bd11ed7f6fbcaec9073581037f9c livecd-tools-1.0.30.ebuild 1172
 RMD160 e6bba0f1af085070f7b0317b24d30ca7d7a79604 livecd-tools-1.0.30.ebuild 1172
@@ -11,10 +12,14 @@ EBUILD livecd-tools-1.0.31.ebuild 1172 RMD160 d84ceabeb641612213311c00409e2d9e50
 MD5 965103a609975100faedc0c4a35af8f4 livecd-tools-1.0.31.ebuild 1172
 RMD160 d84ceabeb641612213311c00409e2d9e5018c69c livecd-tools-1.0.31.ebuild 1172
 SHA256 77e569a63ee01aeaecdbe7fe7669fb3054922a7bc1ef30d765af76b42e6f0e2d livecd-tools-1.0.31.ebuild 1172
-MISC ChangeLog 14419 RMD160 2006047a1ed903d3a26642c4c2224ea5fed98491 SHA1 9f70ee138fd216ba769821fc00b3ac1c1eaaefb9 SHA256 ab5b790518fc822a730fee2b5a07aaaec0fb31a3f853b61467d639fb621cff95
-MD5 7e005f63e25298567abc78a5dfe8ceb4 ChangeLog 14419
-RMD160 2006047a1ed903d3a26642c4c2224ea5fed98491 ChangeLog 14419
-SHA256 ab5b790518fc822a730fee2b5a07aaaec0fb31a3f853b61467d639fb621cff95 ChangeLog 14419
+EBUILD livecd-tools-1.0.32.ebuild 1172 RMD160 bdf7685b3c24d39e5859153faac5d6e4820cf502 SHA1 40bcd1d6ed24bb59677504826afbddf2cafb2c3d SHA256 c0516b9cef293487a25095bd2e7b7ae1c90b0f899a93befa39bde4d2646e1681
+MD5 017a9af557f5b0a748cce1009061c03a livecd-tools-1.0.32.ebuild 1172
+RMD160 bdf7685b3c24d39e5859153faac5d6e4820cf502 livecd-tools-1.0.32.ebuild 1172
+SHA256 c0516b9cef293487a25095bd2e7b7ae1c90b0f899a93befa39bde4d2646e1681 livecd-tools-1.0.32.ebuild 1172
+MISC ChangeLog 14682 RMD160 ce86253770f8830191747f38451431bf844155d2 SHA1 5c17fab529abd0126713db9a993d132ee7fafd74 SHA256 fb078958e15745a2a4842923619a28514ef9f04f82f88a64fcb45c45e41369ae
+MD5 ae8ce89e037adc5c40c18eca9034731a ChangeLog 14682
+RMD160 ce86253770f8830191747f38451431bf844155d2 ChangeLog 14682
+SHA256 fb078958e15745a2a4842923619a28514ef9f04f82f88a64fcb45c45e41369ae ChangeLog 14682
 MISC metadata.xml 159 RMD160 8db5ed254a6b9baf8f53368da9e71c5532a46073 SHA1 1e72098aafb1fa729eba6fc8357c7e732eb79dee SHA256 b6e17484225400d76c65d178bf5a10dc0a8da7f345993c2acc63d1093a77c90d
 MD5 d86e5b5e47260e5a965eae2afe6d6d40 metadata.xml 159
 RMD160 8db5ed254a6b9baf8f53368da9e71c5532a46073 metadata.xml 159
@@ -25,10 +30,13 @@ SHA256 90510729151cb9b2a211c2e6659944c4a2bbd405a74c32a97f9a598598db9897 files/di
 MD5 69722f189357183d9bb00ea16f4876a3 files/digest-livecd-tools-1.0.31 256
 RMD160 cdf8aa6a79e7b0bf897030df972c796bebdb5db4 files/digest-livecd-tools-1.0.31 256
 SHA256 c6e330d97e1b0919cbe808a2f9ca31bd9462cad5e3948a148d69326e42cec37b files/digest-livecd-tools-1.0.31 256
+MD5 c5addbe5e2ecb26086f5951e58b0e817 files/digest-livecd-tools-1.0.32 259
+RMD160 37fba0ba035ba506379ecb064ce377f9f7bab10a files/digest-livecd-tools-1.0.32 259
+SHA256 1dedd404307d009146764ecbe0526a85008b9530837a2bd296d9cc2223960a2d files/digest-livecd-tools-1.0.32 259
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFEmr9skT4lNIS36YERAsBbAKCpfI4KGwdlaQ4lhNhF48I9rni8UQCbBTmJ
-QIz8s+P0wZ0CBCPDqWz2ar8=
-=eayC
+iD8DBQFEs/jNkT4lNIS36YERAjQrAKC9kkodbOwBsnzffcB1jVVxydcpJgCgl86f
+4SVgpiS6XZvZVeveQIB3ZS4=
+=7ZXc
 -----END PGP SIGNATURE-----
