@@ -1,0 +1,3 @@
+MD5 917690d5268d54b8cd0f00033fdd1f28 livecd-tools-1.0.32.tar.bz2 10001
+RMD160 cfd0e7d1e0162e3f0f58f28ba9585ac6bcfdd84b livecd-tools-1.0.32.tar.bz2 10001
+SHA256 ca9861356beb4b2f059b7e80db7e35841f0d6b163af3b8b6528b7cdbbf1b8c2b livecd-tools-1.0.32.tar.bz2 10001
