@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/livecd-tools
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/livecd-tools/ChangeLog,v 1.77 2006/06/22 15:33:07 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/livecd-tools/ChangeLog,v 1.78 2006/07/11 19:15:20 wolf31o2 Exp $
+
+*livecd-tools-1.0.32 (11 Jul 2006)
+
+  11 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  +livecd-tools-1.0.32.ebuild:
+  Version bump to add a fix from Roy Marples <uberlord@gentoo.org> to remove
+  some warning messages about read only variables at boot time.
 
 *livecd-tools-1.0.31 (22 Jun 2006)
 
